--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=Game
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=${APP_PROFILE:test}
+spring.jpa.open-in-view=false
+
+cors.origins=${CORS_ORIGINS:http://localhost:5173,http://localhost:3000}
 
